--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://localhost:8080/"
+baseURL = "http://hobbin.wang/"
 languageCode = "zh-cn"
 defaultContentLanguage = "zh-cn"                             # en / zh-cn / ... (This field determines which i18n file to use)
 title = "Hobbin's Blog - A programmer focus on data science"
@@ -73,7 +73,7 @@ copyright = "Hobbin"            # default: author.name ↓        # 默认为下
   dateFormatToUse = "2006-01-02 15:04:05"
 
   # show word count and read time ?                       # 是否显示字数统计与阅读时间
-  moreMeta = true
+  moreMeta = false
 
   # Syntax highlighting by highlight.js
   highlightInClient = false
